--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -47,6 +47,7 @@
     .card {
         flex-direction: column;
         margin: 5rem auto;
+        border: none;
 
         &__overlay {
             opacity: 1;
